# advent_of_code

./: Cargo.toml
2023/: Cargo.toml
2023/day_1/: README.md
2023/day_1/cpp/: CMakeLists.txt
2023/day_1/cpp/include/: file_reader.h  problem_1.h  problem_2.h  solver_base.h
2023/day_1/cpp/src/: CMakeLists.txt  file_reader.cc  main.cc  problem_1.cc  problem_2.cc  solver_base.cc
2023/day_1/cpp/tests/: CMakeLists.txt  problem_1_test.cc  problem_2_test.cc
2023/day_1/cpp/tests/data/: file_reader_test_data.txt
2023/day_2/: README.md
2023/day_2/cpp/: CMakeLists.txt  run_main.sh
2023/day_2/cpp/include/: game.h  solver_base.h
2023/day_2/cpp/src/: CMakeLists.txt  game.cc  main.cc  solver_base.cc
2023/day_2/cpp/tests/: CMakeLists.txt  file_reader_test.cc  game_test.cc  solver_base_test.cc
2023/day_3/: Cargo.toml
2023/day_3/src/: test_utils.rs
2023/day_3/src/schematic/: mod.rs
2023/day_3/src/schematic/extractors/: gear_ratio_extractor.rs  mod.rs  part_number_extractor.rs
2023/day_3/src/schematic/line/: line_parse.rs
2023/day_4/src/solver/: mod.rs
2023/problem_1/cpp/: CMakeLists.txt  run_tests.sh
2023/problem_1/cpp/include/: file_reader.h  problem_1.h
2023/problem_1/cpp/src/: CMakeLists.txt  file_reader.cc  main.cc  problem_1.cc
2023/problem_1/cpp/tests/: CMakeLists.txt  file_reader_test.cc
2023/problem_3/: gear_ratios_data_thoughts.txt
2023/problem_3/src/: main.rs
2023/problem_3/src/schematic/: range_idx_compare.rs
2023/problem_3/src/schematic/line/: mod.rs
problem_3/: Cargo.toml  README.md
problem_3/src/: main.rs  test_utils.rs
problem_3/src/schematic/: number_container.rs
problem_3/src/schematic/extractors/: part_number_extractor.rs
problem_3/src/schematic_line/: line_compare.rs  line_parse.rs  mod.rs  tests.rs  vector_index_cmp.rs
problem_4/src/: main.rs
